# ptr

./: .harper-dictionary.txt  CHANGELOG.md  Cargo.toml  README.md  generate_help.ps1  usage.md
.github/workflows/: release.yml
src/: config.rs  main.rs  pin.rs  polling.rs  util.rs
test/: test.toml
