[package]
name = "ptr"
version = "0.11.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.40"
colored = "2.2.0"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "json", "native-tls"] }
self-replace = "1.5.0"
serde = { version = "1.0.216", features = ["derive"] }
tabwriter = { version = "1.4.0", features = ["ansi_formatting"] }
toml = "0.8.19"
windows = { version = "0.58.0", features = ["Win32_UI_Shell", "Win32_System_Registry", "Win32_System_Threading"] }
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
